chore: Clean up unused imports and enhance code structure across multiple files